force-app/main/default/objects/CQ_RS_SQX_Bank__c/CQ_RS_SQX_Bank__c.object-meta.xml
<CustomObject>
    <description>The Bank object is used to store information about banks.</description>
    <label>Bank</label>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>