force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_Completion_Date__c</fullName>
    <description>The date on which the record is expected to be completed</description>
    <inlineHelpText>Enter the completion date in the format YYYY-MM-DD.</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>