force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_Department__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_Department__c</fullName>
    <description>The department responsible for the bank.</description>
    <inlineHelpText>Select the department from the list.</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Cyber Security</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>