force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_SQX_Account__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_SQX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account associated with the record.</description>
    <inlineHelpText>Select the account from the list. Only active accounts and records of type Supplier will be displayed.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Banks</relationshipLabel>
    <relationshipName>CQ_RS_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>