force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_SQX_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_SQX_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account associated with the record.</description>
    <inlineHelpText>This field is automatically populated when the account is created.</inlineHelpText>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Banks1</relationshipName>
    <type>Lookup</type>
</CustomField>