force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_SQX_Part__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_SQX_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The part associated with the Part Family.</description>
    <inlineHelpText>Select the part from the list.</inlineHelpText>
    <label>Part</label>
    <referenceTo>compliancequest__SQX_Part__c</referenceTo>
    <relationshipLabel>Banks</relationshipLabel>
    <relationshipName>CQ_RS_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>