force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_SQX_Part_Family__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_SQX_Part_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Part family which is associated with the Bank.</description>
    <inlineHelpText>Select the part family from the list</inlineHelpText>
    <label>Part Family</label>
    <referenceTo>compliancequest__SQX_Part_Family__c</referenceTo>
    <relationshipLabel>Banks</relationshipLabel>
    <relationshipName>SQX_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>