force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_Start_Date__c</fullName>
    <description>The date on which the work in started</description>
    <inlineHelpText>Enter the start date in the format YYYY-MM-DD.   The work start Date must be less than the completion Date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>