force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_Upload_File__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_Upload_File__c</fullName>
    <description>A file associated with the Bank.</description>
    <inlineHelpText>Click the Upload File button to upload a file.</inlineHelpText>
    <label>Upload File</label>
    <length>50</length>
    <type>Text</type>
</CustomField>