force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_Work_Detail__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_Work_Detail__c</fullName>
    <description>A brief description of the work being done.</description>
    <inlineHelpText>Enter a brief description of the work being done as text.</inlineHelpText>
    <label>Work Detail</label>
    <length>60</length>
    <type>Text</type>
</CustomField>