force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_Work_Staus__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_Work_Staus__c</fullName>
    <description>The status of the work.</description>
    <inlineHelpText>Select the status from the list.</inlineHelpText>
    <label>Work Staus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>