force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_Working_Days__c</fullName>
    <description>The days on which the work is being done.</description>
    <inlineHelpText>Select the days on which the work is being done from the list</inlineHelpText>
    <label>Working Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>