force-app/main/default/objects/CQ_RS_SQX_Bank__c/fields/CQ_RS_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_Working_Hours__c</fullName>
    <description>The number of hours worked in bank.</description>
    <inlineHelpText>Enter the number of hours worked in the bank in a number.</inlineHelpText>
    <label>Working Hours</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>