force-app/main/default/objects/CQ_RS_SQX_Bank__c/validationRules/Start_date_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>CQ_RS_Completion_Date__c  &lt;  CQ_RS_Start_Date__c</errorConditionFormula>
    <errorMessage>Start date must be less the completed date</errorMessage>
</ValidationRule>